force-app/main/default/objects/DOC_ContentDocumentExtension__c/DOC_ContentDocumentExtension__c.object-meta.xml
<CustomObject>
    <label>Content Document Extension</label>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Content Document Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Documents Extension</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>