force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/DOC_accuracy__c.field-meta.xml
<CustomField>
    <fullName>DOC_accuracy__c</fullName>
    <label>Document Accuracy</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>