force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/DOC_contentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>DOC_contentDocumentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>