force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/DOC_ContentDocumentLink__c.field-meta.xml
<CustomField>
    <fullName>DOC_ContentDocumentLink__c</fullName>
    <description>Formula field that generates a direct link to the associated ContentDocument</description>
    <formula>HYPERLINK(
  LEFT($Api.Partner_Server_URL_470, FIND('/services', $Api.Partner_Server_URL_470)) & '/' & DOC_ContentDocumentId__c,
  'Ver Documento'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Document Link</label>
    <type>Text</type>
</CustomField>