force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/DOC_status__c.field-meta.xml
<CustomField>
    <fullName>DOC_status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>