force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/DOC_summary__c.field-meta.xml
<CustomField>
    <fullName>DOC_summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>