force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/DOC_type__c.field-meta.xml
<CustomField>
    <fullName>DOC_type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apoderamiento</fullName>
            </value>
            <value>
                <fullName>Comunicados</fullName>
            </value>
            <value>
                <fullName>Contratos y anexos</fullName>
            </value>
            <value>
                <fullName>Documento de Identidad</fullName>
            </value>
            <value>
                <fullName>Extractos, comprobantes y liquidaciones</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Reclamación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>