force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/DOM_caseExtension__c.field-meta.xml
<CustomField>
    <fullName>DOM_caseExtension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Extension</label>
    <referenceTo>DOM_CaseExtension__c</referenceTo>
    <relationshipLabel>Content Document Extensions</relationshipLabel>
    <relationshipName>Content_Document_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>