force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/ENT_claimant1Reason__c.field-meta.xml
<CustomField>
    <fullName>ENT_claimant1Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claimant 1 Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>