force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/ENT_claimant2__c.field-meta.xml
<CustomField>
    <fullName>ENT_claimant2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claimant 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>