force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/ENT_others__c.field-meta.xml
<CustomField>
    <fullName>ENT_others__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Others</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>