force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/ENT_representative__c.field-meta.xml
<CustomField>
    <fullName>ENT_representative__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Representative</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>