force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/ENT_representativeReason__c.field-meta.xml
<CustomField>
    <fullName>ENT_representativeReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Representative Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>