force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/EVAL_CategorizationKOFeedback__c.field-meta.xml
<CustomField>
    <fullName>EVAL_CategorizationKOFeedback__c</fullName>
    <description>Campo de texto largo donde se debe guardar el motivo específico por el cual la categorización del documento no fue correcta. Este campo permite documentar los errores o problemas encontrados durante el proceso de análisis automático.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo de categorización incorrecta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>