force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/EVAL_isCategorizationOK__c.field-meta.xml
<CustomField>
    <fullName>EVAL_isCategorizationOK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la categorización del documento se realizó de manera correcta o incorrecta. Este campo determina el estado de éxito de la categorización automática del contenido del documento.</description>
    <label>Categorización Correcta</label>
    <type>Checkbox</type>
</CustomField>