force-app/main/default/objects/DOC_ContentDocumentExtension__c/fields/EVAL_status__c.field-meta.xml
<CustomField>
    <fullName>EVAL_status__c</fullName>
    <description>Indica el estado actual de la evaluación de categorización del documento. Permite distinguir entre documentos pendientes de evaluación, evaluaciones correctas e incorrectas.</description>
    <label>Estado de la evaluación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de evaluación</fullName>
                <default>true</default>
                <label>Pendiente de evaluación</label>
            </value>
            <value>
                <fullName>Evaluación correcta</fullName>
            </value>
            <value>
                <fullName>Evaluación incorrecta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>