force-app/main/default/objects/DOC_ContentDocumentExtension__c/listViews/An_lisis_de_documentos_Analizados.listView-meta.xml
<ListView>
    <fullName>An_lisis_de_documentos_Analizados</fullName>
    <columns>DOC_ContentDocumentLink__c</columns>
    <columns>DOC_type__c</columns>
    <columns>EVAL_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EVAL_status__c</field>
        <operation>equals</operation>
        <value>Evaluación correcta,Evaluación incorrecta</value>
    </filters>
    <filters>
        <field>DOC_status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </filters>
    <label>Análisis de documentos - Analizados</label>
</ListView>