force-app/main/default/objects/DOC_ContentDocumentExtension__c/listViews/An_lisis_de_documentos_PTE_Apoderamien.listView-meta.xml
<ListView>
    <fullName>An_lisis_de_documentos_PTE_Apoderamien</fullName>
    <columns>DOC_ContentDocumentLink__c</columns>
    <columns>DOC_summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EVAL_status__c</field>
        <operation>equals</operation>
        <value>,Pendiente de evaluación</value>
    </filters>
    <filters>
        <field>DOC_type__c</field>
        <operation>equals</operation>
        <value>Apoderamiento</value>
    </filters>
    <filters>
        <field>DOC_status__c</field>
        <operation>notEqual</operation>
        <value>Error</value>
    </filters>
    <label>Análisis de documentos PTE - Apoderamien</label>
</ListView>