force-app/main/default/objects/DOC_ContentDocumentExtension__c/listViews/Analisis_de_documentos.listView-meta.xml
<ListView>
    <fullName>Analisis_de_documentos</fullName>
    <columns>NAME</columns>
    <columns>DOC_ContentDocumentLink__c</columns>
    <columns>EVAL_status__c</columns>
    <columns>DOC_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EVAL_status__c</field>
        <operation>equals</operation>
        <value>,Pendiente de evaluación</value>
    </filters>
    <filters>
        <field>DOC_status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </filters>
    <label>Analisis de documentos</label>
</ListView>